RecorderDll/source/API/RecordingManagerAPI.h

#pragma once
    
#ifdef RecorderDll_EXPORTS
#define RecorderDll_API __declspec(dllexport)
#else
#define RecorderDll_API __declspec(dllimport)
#endif

#include "../additionals.h"

extern "C" RecorderDll_API int RecordingManager_Test(int a, int b);
extern "C" RecorderDll_API void* RecordingManager_New();
extern "C" RecorderDll_API void RecordingManager_Delete(void* recordingManager);
extern "C" RecorderDll_API int RecordingManager_GetRecordersNumber(void* recordingManager);
extern "C" RecorderDll_API Colors RecordingManager_GetColorBitmap(void* recordingManager);
extern "C" RecorderDll_API void RecordingManager_RecordingMode(void* recordingManager);
extern "C" RecorderDll_API void RecordingManager_PreviewMode(void* recordingManager);